--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=catalo-musical
-spring.datasource.url=jdbc:postgresql://localhost:5432/catalogo?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=postgres
-spring.datasource.password=2944
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.jpa.hibernate.ddl-auto=update
-spring.datasource.platform=postgres
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/catalogo?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.platform=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
