--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=catalo-musical
 spring.datasource.url=jdbc:mysql://localhost:3306/catalogo?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.username=catalogo
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
